--- a/scripts/siqi.ipynb
+++ b/scripts/siqi.ipynb
@@ -2,6 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "source": [
+    "# Predicting a film’s gross revenue"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
    "id": "67e96d4c",
    "metadata": {},
    "source": [
@@ -22,7 +31,16 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## 2. Read the data"
+    "## 2. Data at first glance"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 2.1 Read the data"
    ],
    "metadata": {
     "collapsed": false
@@ -59,6 +77,24 @@
    "source": [
     "X1.head()"
    ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# 2.2 Data visualization"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false
    }
