--- a/scripts/main.ipynb
+++ b/scripts/main.ipynb
@@ -23,6 +23,7 @@
     "# Machine learning packages\n",
     "from sklearn.preprocessing import MinMaxScaler, StandardScaler, MultiLabelBinarizer, FunctionTransformer\n",
     "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.neighbors import KNeighborsRegressor\n",
     "import torch\n",
     "\n",
     "# Visualization packages\n",
@@ -477,8 +478,26 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## 4. Regression Models"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### 4.1 Linear regression"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "outputs": [],
    "source": [],
    "metadata": {
