--- a/scripts/feastureSelection.ipynb
+++ b/scripts/feastureSelection.ipynb
@@ -665,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "outputs": [
     {
      "name": "stderr",
@@ -824,7 +824,37 @@
       "[Parallel(n_jobs=1)]: Done 196 out of 196 | elapsed:  3.3min finished\n",
       "\n",
       "[2022-12-06 23:37:26] Features: 38/233 -- score: 0.3521370768361206[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
-      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:    1.0s remaining:    0.0s\n"
+      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:    1.0s remaining:    0.0s\n",
+      "[Parallel(n_jobs=1)]: Done 195 out of 195 | elapsed:  3.5min finished\n",
+      "\n",
+      "[2022-12-06 23:40:54] Features: 39/233 -- score: 0.3607306057708447[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
+      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:    1.1s remaining:    0.0s\n",
+      "[Parallel(n_jobs=1)]: Done 194 out of 194 | elapsed:  3.4min finished\n",
+      "\n",
+      "[2022-12-06 23:44:18] Features: 40/233 -- score: 0.35003607676956566[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
+      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:    1.1s remaining:    0.0s\n",
+      "[Parallel(n_jobs=1)]: Done 193 out of 193 | elapsed:  3.4min finished\n",
+      "\n",
+      "[2022-12-06 23:47:45] Features: 41/233 -- score: 0.3541473478215742[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
+      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:    1.1s remaining:    0.0s\n",
+      "[Parallel(n_jobs=1)]: Done 192 out of 192 | elapsed:  3.8min finished\n",
+      "\n",
+      "[2022-12-06 23:51:30] Features: 42/233 -- score: 0.3592083490445546[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
+      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:    1.2s remaining:    0.0s\n",
+      "[Parallel(n_jobs=1)]: Done 191 out of 191 | elapsed:  3.8min finished\n",
+      "\n",
+      "[2022-12-06 23:55:21] Features: 43/233 -- score: 0.3592194856931105[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
+      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:    1.3s remaining:    0.0s\n",
+      "[Parallel(n_jobs=1)]: Done 190 out of 190 | elapsed:  4.0min finished\n",
+      "\n",
+      "[2022-12-06 23:59:24] Features: 44/233 -- score: 0.3718770357024953[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
+      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:    1.2s remaining:    0.0s\n",
+      "[Parallel(n_jobs=1)]: Done 189 out of 189 | elapsed:  4.4min finished\n",
+      "\n",
+      "[2022-12-07 00:03:46] Features: 45/233 -- score: 0.359018833855559[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
+      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:    1.5s remaining:    0.0s\n",
+      "\n",
+      "STOPPING EARLY DUE TO KEYBOARD INTERRUPT..."
      ]
     }
    ],
@@ -843,10 +873,7 @@
     ").fit(DR_df, Y1.values.ravel())"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "is_executing": true
-    }
+    "collapsed": false
    }
   },
   {
