--- a/scripts/main.ipynb
+++ b/scripts/main.ipynb
@@ -583,8 +583,8 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "X1_ready = p1.fit_transform(X1)\n",
-    "X1_ready[:5, :]"
+    "X1_pre = p1.fit_transform(X1)\n",
+    "X1_pre[:5, :]"
    ],
    "metadata": {
     "collapsed": false,
@@ -651,7 +651,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "renamed_df_ready = renamingDataset(X1_ready)\n",
+    "renamed_df_ready = renamingDataset(X1_pre)\n",
     "renamed_df_ready.head()"
    ],
    "metadata": {
@@ -747,7 +747,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "df_reduced_emb = DRembeddings(img_emb_df, text_emb_df, n_components=0.9)\n",
+    "df_reduced_emb = DRembeddings(img_emb_df, text_emb_df)\n",
     "df_reduced_emb.head()"
    ],
    "metadata": {
@@ -1003,7 +1003,8 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "p2.fit_transform(X1)"
+    "X1_ready = p2.fit_transform(X1)\n",
+    "X1_ready.head()"
    ],
    "metadata": {
     "collapsed": false,
@@ -1016,9 +1017,7 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [
-    "p2.fit_transform(X2)"
-   ],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
