--- a/scripts/mlp.ipynb
+++ b/scripts/mlp.ipynb
@@ -2,23 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2022-12-18 20:29:02.774197: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
-      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2022-12-18 20:29:04.347365: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer.so.7'; dlerror: libnvinfer.so.7: cannot open shared object file: No such file or directory\n",
-      "2022-12-18 20:29:04.347439: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer_plugin.so.7'; dlerror: libnvinfer_plugin.so.7: cannot open shared object file: No such file or directory\n",
-      "2022-12-18 20:29:04.347445: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Cannot dlopen some TensorRT libraries. If you would like to use Nvidia GPU with TensorRT, please make sure the missing libraries mentioned above are installed properly.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Data processing packages\n",
     "import numpy as np\n",
@@ -29,8 +17,8 @@
     "from sklearn.model_selection import GridSearchCV, RepeatedKFold, cross_val_score, KFold, train_test_split\n",
     "from sklearn.preprocessing import MinMaxScaler, StandardScaler, MultiLabelBinarizer, FunctionTransformer\n",
     "from sklearn.pipeline import Pipeline\n",
-    "from mlxtend.feature_selection import SequentialFeatureSelector as SFS\n",
-    "from sklearn.feature_selection import SequentialFeatureSelector, RFE, SelectPercentile, chi2, mutual_info_regression, SelectFromModel\n",
+    "from mlxtend.feature_selection import SequentialFeatureSelector\n",
+    "from sklearn.feature_selection import RFE, SelectPercentile, chi2, mutual_info_regression, SelectFromModel\n",
     "from mlxtend.plotting import plot_sequential_feature_selection as plot_sfs\n",
     "from sklearn.linear_model import LinearRegression, Lasso\n",
     "from sklearn.neighbors import KNeighborsRegressor\n",
@@ -38,13 +26,14 @@
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.decomposition import PCA, KernelPCA, FastICA\n",
     "from sklearn.manifold import TSNE\n",
-    "from sklearn.metrics import mean_squared_error\n",
+    "from sklearn.metrics import mean_squared_error, r2_score\n",
+    "from sklearn.neural_network import MLPRegressor\n",
     "\n",
     "import torch\n",
-    "from keras.models import Sequential\n",
-    "from keras.layers import Activation, Dense\n",
-    "from keras import optimizers\n",
-    "from keras.layers import BatchNormalization\n",
+    "# from keras.models import Sequential\n",
+    "# from keras.layers import Activation, Dense\n",
+    "# from keras import optimizers\n",
+    "# from keras.layers import BatchNormalization\n",
     "\n",
     "# Visualization packages\n",
     "import seaborn as sns\n",
@@ -66,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "X1_pca = torch.load('X1_pca').to_numpy()\n",
@@ -94,7 +83,143 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [],
+   "source": [
+    "mlp = MLPRegressor(random_state=42, max_iter=1000, verbose=0)\n",
+    "hidden_layer_lists = [\n",
+    "    (200,),\n",
+    "    (200, 175,),\n",
+    "    (200, 175, 150,),\n",
+    "    (200, 175, 150, 125,),\n",
+    "    (200, 175, 150, 125, 100,),\n",
+    "    (200, 175, 150, 125, 100, 75,),\n",
+    "    (200, 175, 150, 125, 100, 75, 50,),\n",
+    "    (200, 175, 150, 125, 100, 75, 50, 25,),\n",
+    "    (200, 175, 150, 125, 100, 75, 50, 25, 10)\n",
+    "]\n",
+    "mlp_parameter_grid = {\n",
+    "    'hidden_layer_sizes': hidden_layer_lists,\n",
+    "    'activation': ['tanh', 'relu', 'sigmoid'],\n",
+    "    'solver': ['sgd', 'adam'],\n",
+    "    'alpha': [0.0001, 0.05],\n",
+    "    'batch_size': [177],\n",
+    "    'learning_rate': ['constant','adaptive'],\n",
+    "}"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "mlp_grid_pca = GridSearchCV(mlp, mlp_parameter_grid, cv=10, scoring='neg_root_mean_squared_error', return_train_score=True,verbose=2)\n",
+    "mlp_grid_ica = GridSearchCV(mlp, mlp_parameter_grid, cv=10, scoring='neg_root_mean_squared_error', return_train_score=True,verbose=2)\n",
+    "mlp_grid_tsne = GridSearchCV(mlp, mlp_parameter_grid, cv=10, scoring='neg_root_mean_squared_error', return_train_score=True,verbose=2)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "mlp_grid_pca.fit(X_train_pca, np.log(1 + y_train))"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "torch.save(mlp_grid_pca, \"../models/mlp_grid_pca\")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "print(\"The best parameters are:\", mlp_grid_pca.best_params_)\n",
+    "print(\"The best RMSE is:\", mlp_grid_pca.best_score_)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "mlp_grid_ica.fit(X_train_ica, np.log(1 + y_train))"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "torch.save(mlp_grid_ica, \"../models/mlp_grid_ica\")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "print(\"The best parameters are:\", mlp_grid_ica.best_params_)\n",
+    "print(\"The best RMSE is:\", mlp_grid_ica.best_score_)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "mlp_grid_tsne.fit(X_train_tsne, np.log(1 + y_train))"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "torch.save(mlp_grid_tsne, \"../models/mlp_grid_tsne\")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "print(\"The best parameters are:\", mlp_grid_tsne.best_params_)\n",
+    "print(\"The best RMSE is:\", mlp_grid_tsne.best_score_)"
+   ],
    "metadata": {
     "collapsed": false
    }
