--- a/scripts/main.ipynb
+++ b/scripts/main.ipynb
@@ -12,8 +12,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
-   "outputs": [],
+   "execution_count": 1,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "# Data processing packages\n",
     "import numpy as np\n",
@@ -1480,7 +1488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "X1_pca = torch.load('X1_pca').to_numpy()\n",
@@ -1494,7 +1502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "X_train_pca, X_test_pca, y_train, y_test = train_test_split(X1_pca, Y1, random_state=42, test_size=0.1)\n",
@@ -1516,7 +1524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "LR_pca = LinearRegression()\n",
