--- a/scripts/main.ipynb
+++ b/scripts/main.ipynb
@@ -12,8 +12,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
-   "outputs": [],
+   "execution_count": 1,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "# Data processing packages\n",
     "import numpy as np\n",
@@ -1480,7 +1488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "X1_pca = torch.load('X1_pca').to_numpy()\n",
@@ -1494,7 +1502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "X_train_pca, X_test_pca, y_train, y_test = train_test_split(X1_pca, Y1, random_state=42, test_size=0.1)\n",
@@ -1516,7 +1524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "LR_pca = LinearRegression()\n",
@@ -1911,131 +1919,27 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "X_train_pca.shape"
+    "mlp = MLPRegressor(random_state=42, max_iter=1000, verbose=0)\n",
+    "hidden_layer_lists = [\n",
+    "    (200,),\n",
+    "    (200, 175,),\n",
+    "    (200, 175, 150,),\n",
+    "    (200, 175, 150, 125,),\n",
+    "    (200, 175, 150, 125, 100,),\n",
+    "    (200, 175, 150, 125, 100, 75,),\n",
+    "    (200, 175, 150, 125, 100, 75, 50,),\n",
+    "    (200, 175, 150, 125, 100, 75, 50, 25,),\n",
+    "    (200, 175, 150, 125, 100, 75, 50, 25, 10)\n",
+    "]\n",
+    "mlp_parameter_grid = {\n",
+    "    'hidden_layer_sizes': hidden_layer_lists,\n",
+    "    'activation': ['tanh', 'relu'],\n",
+    "    'solver': ['sgd', 'adam'],\n",
+    "    'alpha': [0.0001, 0.05],\n",
+    "    'batch_size': [177],\n",
+    "    'learning_rate': ['constant','adaptive'],\n",
+    "}"
    ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "model = Sequential()\n",
-    "\n",
-    "model.add(Dense(200, input_shape = (219, ), kernel_initializer='he_normal'))\n",
-    "# model.add(BatchNormalization())\n",
-    "model.add(Activation('relu'))\n",
-    "model.add(Dense(175, kernel_initializer='he_normal'))\n",
-    "# model.add(BatchNormalization())\n",
-    "model.add(Activation('relu'))\n",
-    "model.add(Dense(150, kernel_initializer='he_normal'))\n",
-    "# model.add(BatchNormalization())\n",
-    "model.add(Activation('relu'))\n",
-    "model.add(Dense(125, kernel_initializer='he_normal'))\n",
-    "# model.add(BatchNormalization())\n",
-    "model.add(Activation('relu'))\n",
-    "model.add(Dense(100, kernel_initializer='he_normal'))\n",
-    "# model.add(BatchNormalization())\n",
-    "model.add(Activation('relu'))\n",
-    "model.add(Dense(75, kernel_initializer='he_normal'))\n",
-    "# model.add(BatchNormalization())\n",
-    "model.add(Activation('relu'))\n",
-    "model.add(Dense(50, kernel_initializer='he_normal'))\n",
-    "# model.add(BatchNormalization())\n",
-    "model.add(Activation('relu'))\n",
-    "model.add(Dense(25, kernel_initializer='he_normal'))\n",
-    "# model.add(BatchNormalization())\n",
-    "model.add(Activation('relu'))\n",
-    "model.add(Dense(10, kernel_initializer='he_normal'))\n",
-    "# model.add(BatchNormalization())\n",
-    "model.add(Activation('relu'))\n",
-    "model.add(Dense(5, kernel_initializer='he_normal'))\n",
-    "# model.add(BatchNormalization())\n",
-    "model.add(Activation('relu'))\n",
-    "model.add(Dense(1, kernel_initializer='he_normal'))"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "sgd = optimizers.Adam(lr = 0.001)\n",
-    "model.compile(optimizer = sgd, loss = 'mean_squared_error', metrics = ['mse'])"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "history = model.fit(X_train_pca, y_train, batch_size = 177, validation_split = 0.3, epochs = 300, verbose = 2)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "plt.plot(np.sqrt(history.history['mse']))\n",
-    "plt.plot(np.sqrt(history.history['val_mse']))\n",
-    "plt.legend(['training', 'validation'])\n",
-    "plt.show()"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "y_pre = np.exp(model.predict(X_test_models)-1)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "print(\"Mean squared error: %.2f Millions\" % (np.sqrt(mean_squared_error(y_test_models, y_pre)) / 1000000))\n",
-    "# print(np.exp(np.log(10)))"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "np.sqrt(7640352577377621) / 1000000"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
    "metadata": {
     "collapsed": false
    }
